--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.3",
@@ -23,6 +27,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
+    "sass": "^1.42.1",
+    "sass-loader": "^10.2.0",
     "jest-environment-jsdom": "^29.1.2",
     "vue-jest": "^3.0.4"
   }
