--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,45 +1,24 @@
-name: ci
+name: CI
 
 on:
   push:
     branches:
       - main
-      - master
-  pull_request:
-    branches:
-      - main
-      - master
 
 jobs:
-  ci:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [lts/*]
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 🛎
-        uses: actions/checkout@master
+      - uses: actions/checkout@v2
 
-      - name: Setup node env 🏗
-        uses: actions/setup-node@v3.0.0
-        with:
-          node-version: ${{ matrix.node }}
-          check-latest: true
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Cache node_modules 📦
-        uses: actions/cache@v2.1.7
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: Login to Azure Container Registry
+        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login apiaihealthpros.azurecr.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
-      - name: Install dependencies 👨🏻‍💻
-        run: npm ci --prefer-offline --no-audit
-
-
-      - name: Run tests 🧪
-        run: npm run test
+      - name: Build and push Docker image
+        run: |
+          docker build -t apiaihealthpros.azurecr.io/vue_aihealthpros:v1 .
+          docker push apiaihealthpros.azurecr.io/vue_aihealthpros:v1
